# obsidian-cli-tool

./: .env.temp  README.md  main.py  note_quality.py  pyproject.toml
src/models/: llm_clients.py
src/modules/: note_linker.py  note_quality.py
